bloonix-agent (0.36) released at 2014-11-16

    * Added use_sudo as global configuration parameter for the agent.
    * Fixed owner of all directories and files within /etc/bloonix.

bloonix-agent (0.35) released at 2014-11-08

    * Decreased the poll interval from 20 to 15 seconds because the
      the lowest interval of check_frequency=high is 15 seconds.

bloonix-agent (0.34) released at 2014-11-05

    * Increased the default timeout for checks from 30 to 60 seconds.

bloonix-agent (0.33) released at 2014-11-05

    * Fixed the init script and removed S20 or any other
      prefix from basename.

bloonix-agent (0.32) released at 2014-11-03

    * Updated the license information.

bloonix-agent (0.31) released at 2014-10-25

    * On systems with systemd STDOUT and STDERR are redirected
      to syslog by default. On sysvinit system it's possible to
      redirect STDOUT and STDERR to syslog.

bloonix-agent (0.30) released at 2014-10-24

    * Disable die_on_errors by default so that the logger
      does not die on errors.

bloonix-agent (0.29) released at 2014-08-25

    * Splitted the bloonix-agent package into 2 packages.
      Dependencies are now find in the bloonix-core package.
    * Switched back to the original HTTP::Tiny.

bloonix-agent (0.28) released at 2014-06-03

    * Added add_pre_check and post_check to Bloonix::REST.
    * Added option check_ok_status to Bloonix::REST.
    * Net::DNS::Resolver is used to resolv hostnames to ip
      addresses.
    * Added new methods get_mtr and get_ip_by_hostname
      to Bloonix::Plugin.

bloonix-agent (0.27) released at 2014-05-26

    * Added Bloonix::Plugin::Socket.
    * Bloonix::Plugin has an eval() method.

bloonix-agent (0.26) released at 2014-05-14

    * Minus values are now possible for thresholds.
    * Added new features to Bloonix::Plugin.

bloonix-agent (0.25) released at 2014-05-12

    * execute_on_event is now working.
    * Fixed encoding problems and added utf8 to parse the output